# chat-review-py

./: LICENSE  README.md  cli.py  pyproject.toml
chat_review/: chatgpt.py  gitlab.py  index.py  types.py  utils.py
tests/: test_gitlab.py
